--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: rgb(34,193,195);
+  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 4rem;
+  margin-bottom: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+  padding: 1rem;
+  margin: 2rem;
+  border-radius: 1rem;
+  font-size: 2rem;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+select {
+  padding: 0.5rem;
+  display: block;
+  margin:0 auto;
+  margin-top: 2rem;
+  width: 85%;
+  border-radius: 0.7rem;
+  font-size: 1rem;
+  border: 2px solid black;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  padding-right: 1rem;
+  margin: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#swap {
+  display: block;
+  margin: 0 auto;
+  color: black;
+  font-size: 2.5rem;
 }
